# anzym_ros_ws

./: .gitignore  ACKNOWLEDGEMENTS.md  README.md
docs/: PROGRESS.md  ROADMAP.md  running_notes.md
docs/guides/: Rosmaster_Optimization_Guide.md  setup_and_workflow.md
scripts/: check_system_health.py  deploy_to_robot.sh  diagnose_lidar.py  diagnose_robot.py  diagnose_usb.sh  read_serial.py  setup_udev.sh  setup_udev_rules.sh  sync_time.sh  test_imu.py  test_motor.py
src/anzym_core/: package.xml  setup.cfg  setup.py
src/anzym_core/anzym_core/: Rosmaster_Lib.py  arm_teleop_node.py  driver_node.py
src/anzym_core/config/: ekf_params.yaml  mapper_params_online_async.yaml  ydlidar.yaml
src/anzym_core/launch/: bringup_launch.py  camera_launch.py  joystick_control_launch.py  slam_launch.py
src/anzym_description/: CMakeLists.txt  package.xml
src/anzym_description/launch/: description_launch.py
src/anzym_description/rviz/: yahboomcar.rviz
src/anzym_description/urdf/: yahboomcar_X3.urdf.xacro  yahboomcar_X3plus.gazebo.urdf.xacro  yahboomcar_X3plus.urdf.xacro
src/anzym_description/urdf/.ipynb_checkpoints/: yahboomcar_X3plus.urdf-checkpoint.xacro
src/anzym_description/urdf/_deprecated/: anzym.urdf.xacro  yahboomcar_X3.urdf
src/anzym_description/urdf/bak/: yahboomcar_X3.urdf  yahboomcar_X3.urdf.xacro  yahboomcar_X3plus.urdf
src/ydlidar_ros2_driver/launch/: ydlidar_launch.py
tools/urdf_viewer/: index.html  serve.py
